--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,13 @@
 services:
-  - type: static
+  - type: web
     name: bot-sports-empire-frontend
+    env: static
+    region: oregon
+    plan: free
+    startCommand: npx serve dist -p $PORT
     publishDir: dist
+    healthCheckPath: /
+    autoDeploy: true
+    envVars:
+      - key: NODE_VERSION
+        value: "18.17.0"
